--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
-    "http-errors": "~1.6.3",
+    "http-errors": "^1.6.3",
     "jquery": "^3.5.1",
+    "jsdom": "^16.4.0",
     "mongoose": "^5.10.10",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
