--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.1",
     "http-errors": "^1.6.3",
     "jquery": "^3.5.1",
+    "jquery-toast-plugin": "^1.3.2",
     "jsdom": "^16.4.0",
     "mongoose": "^5.10.10",
     "morgan": "~1.9.1",
